results are now dispalyed in the list view and an onclick listenenr is placed on each result that shows more details based on the selectin

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         <activity
             android:name=".ui.RecipeListActivity"
             android:theme="@style/AppTheme" />
-        <activity android:name=".RecipeDetailActivity"></activity>
+        <activity android:name=".ui.RecipeDetailActivity"
+            android:theme="@style/AppTheme">
+
+        </activity>
     </application>
 </manifest>
