Fixed Bug that caused saved recipe's page when clicked. error was that the theme was not defined. The application no launches the log in page on launch and when sign is clicked it redirects to create account activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,25 +20,41 @@
             android:theme="@style/NoActionBar">
 
         </activity>
+
         <activity
             android:name=".ui.RecipeListActivity"
             android:theme="@style/AppTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.josephinemenge.pika.MainActivity" />
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.example.josephinemenge.pika.MainActivity" />
+
         </activity>
+
         <activity
             android:name=".ui.RecipeDetailActivity"
             android:theme="@style/AppTheme" />
-        <activity android:name=".SavedRecipeListActivity" />
-        <activity android:name=".CreateAccountActivity" />
-        <activity android:name=".LoginActivity">
+
+        <activity
+            android:name=".ui.SavedRecipeListActivity"
+            android:theme="@style/AppTheme">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.example.josephinemenge.pika.MainActivity" />
+        </activity>
+
+        <activity android:name=".ui.CreateAccountActivity"
+            android:theme="@style/NoActionBar"/>
+
+        <activity android:name=".ui.LoginActivity"
+            android:theme="@style/NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-    </application>
 
+        </activity>
+
+    </application>
 </manifest>
