user can now login to anna ccount succesfully . Accoutns are logged to firebase and progress dialogs implemented .Fixed bug in saved reciped that made it only show hard coded strings

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+<<<<<<<=HEAD
 #Fri May 26 11:11:12 EAT 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
@@ -12,4 +12,4 @@ distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
->>>>>>> 7fc19862d5eceb474527d0359b35a56d2599e839
+>>>>>>>=7fc19862d5eceb474527d0359b35a56d2599e839
