--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'org.parceler:parceler-api:1.1.6'
     annotationProcessor 'org.parceler:parceler:1.1.6'
+    compile "com.android.support:design:25.3.1"
+
     compile "com.google.firebase:firebase-database:11.0.0"
     compile 'com.firebaseui:firebase-ui-database:0.4.1'
     compile 'com.google.firebase:firebase-auth:11.0.0'
